	2016-04-21  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/plots/__init__.py:

	Added install_mplstyles() to create symbolic links for matplotlib
	stylesheets shipped with typhon.

	* typhon/plots/stylelib: Directory to store matplotlib stylesheets.

	* typhon/plots/stylelib/typhon.mplstyle:

	Matplotlib stylesheet to overwrite the default values for rc params.

2016-04-21  Oliver Lemke  <olemke@core-dump.info>

	* setup.py: Remove author_email. Update homepage url.

2016-04-20  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Set DEVBUILD back to True after release.

2016-04-20  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: 0.2.9 Release.

2016-04-05  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	Added examples on how to create and use a GriddedField object.

2016-03-24  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	- Try to show a progressbar to show the progress on reading a large
	amount of data.  Only works when the progressbar module is available —
	see https://pypi.python.org/pypi/progressbar2

	- Fig bug when no fields are mandatory.

2016-03-22  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	- Raise a specific exception with a helpful error message if mandatory
	fields are missing or have invalid values.

2016-03-22  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	- Don't require name, fallback to attribute then to class name.

2016-03-21  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/metaclass.py:

	- When inheriting a docstring, state what class the docstring was
	inherited from.

2016-03-18  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset.read_period):

	- Add filtering ability to reading long period.

2016-03-18  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/array.py(limit_ndarray):

	- New function to select elements from structured ndarray based on